Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberObjectField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        Object var
        return var
    end
end